<resources>
    <string name="app_name">InstaTwo</string>
    <string name="Already_a_Member">Already a Member</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">email</string>
    <string name="Not_a_Member">Not a Member</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_search_fragment">searchfrag</string>
</resources>
